[#40] Java 9이상에서 실행시 Tomcat 메모리 누수 감지 활성화를 위해 JVM옵션 추가 및 라이브러리 버전업
- Java 9 이상에서 Tomcat 실행시 메모리 누수 감지를 위해 JVM 옵션을 추가하라고 경고가 나와서 추가했다.
- 그외에
  - 스프링 시큐리티 6.2.1에 높은 보안 문제있다고 메일이와서 6.2.2로 올리고 다른 라이브러리도 같이 올림.
    - CVE-2024-22234
  - 주로 테스트하는 하위 프로젝트에는 mvnw, tomcat-run, jetty-run 배치 파일들을 추가해둠.
    어짜피 버전업하고나면 동작확인위해서 반드시 실행을 해와서 추가했다..